k8s/stage-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  type: NodePort
  ports:
    - port: 80
      name: http
      protocol: TCP
